fix image overflow

--- a/main.css
+++ b/main.css
@@ -852,6 +852,16 @@ width: 45%;
   }
 }
 
+@media only screen and (max-width: 410px) {
+  .project_img {
+    width: 90vw;
+  }
+
+  .project_img2 {
+    width: 90vw;
+  }
+}
+
 /* styling of my modal ------------------------------------------ */
 .nav_modal-background {
   width: 100vw;
